--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
         run: |
           pip install pytest
           pip install pytest-cov
-          pytest tests/test.py
+          pytest tests/*
